# policy

./: .cspell.json  .editorconfig  .envrc  .flake8  .gitignore  .gitpod.yml  .mypy.ini  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierignore  .prettierrc.yml  .pydocstyle  .pylintrc  .taplo.toml  CONTRIBUTING.md  README.md  codecov.yml  commitlint.config.js  compwa-policy.schema.json  cspell.json  environment.yml  labels-physics.toml  labels.toml  pyproject.toml  setup.cfg  tox.ini
.codex/skills/: pre-merge  update-pr
.github/: release-drafter.yml
.github/workflows/: add-issue-to-project.yml  benchmark.yml  cd.yml  ci-style.yml  ci-tests.yml  ci.yml  clean-cache.yml  lock.yml  pr-linting.yml  requirements-cron.yml  sync-labels.yml
benchmarks/: conftest.py  test_check_dev_files.py
docs/: check-dev-files.md  conf.py  index.md
docs/_ext/: __init__.py  policy_settings.py
docs/_static/: policy-settings.css
docs/check-dev-files/: configuration.md  migrations.md
labels/: default.toml  meeting.toml  physics.toml
reqs/: requirements-dev.in  requirements-sty.in  upgrade.sh
reqs/3.6/: requirements-dev.txt  requirements-sty.txt  requirements.txt
reqs/3.7/: requirements-dev.txt  requirements-sty.txt  requirements.txt
reqs/3.8/: requirements-dev.txt  requirements-sty.txt  requirements.txt
reqs/3.9/: requirements-dev.txt  requirements-sty.txt  requirements.txt
src/compwa_meta/pre_commit_hooks/: fix_first_nbcell.py
src/compwa_policy/: __init__.py  characterization.py  colab_toc_visible.py  config.py  errors.py  fix_nbformat_version.py  format_setup_cfg.py  pin_nb_requirements.py  remove_empty_tags.py  self_check.py  set_nb_cells.py  set_nb_display_name.py  strip_nb_whitespace.py
src/compwa_policy/.github/: dependabot.yml  release-drafter.yml
src/compwa_policy/.template/: .cspell.json  .gitpod.yml  .taplo.toml  CONTRIBUTING.md.jinja
src/compwa_policy/check_dev_files/: __init__.py  _characterization.py  binder.py  black.py  citation.py  commitlint.py  conda.py  cspell.py  dependabot.py  deprecated.py  direnv.py  editorconfig.py  github_labels.py  github_workflows.py  gitpod.py  jupyter.py  mypy.py  nbstripout.py  pixi.py  poe.py  precommit.py  prettier.py  pyproject.py  pyright.py  pytest.py  pyupgrade.py  readthedocs.py  release_drafter.py  ruff.py  setup_cfg.py  setuptools_scm.py  toml.py  tox.py  ty.py  update_lock.py  update_pip_constraints.py  upgrade_lock.py  uv.py  vscode.py
src/compwa_policy/cli/: __init__.py  _checks.py  _options.py  _schema.py  _settings.py  bootstrap.py  env.py  format.py  github.py  migrate.py  nb.py  python.py  repo.py
src/compwa_policy/env/: conda.py  direnv.py  uv.py
src/compwa_policy/format/: cspell.py  editorconfig.py  precommit.py  prettier.py  toml.py
src/compwa_policy/github/: __init__.py  dependabot.py  labels.py  release_drafter.py  upgrade_lock.py  workflows.py
src/compwa_policy/nb/: binder.py  jupyter.py  nbstripout.py
src/compwa_policy/python/: black.py  mypy.py  pyproject.py  pyright.py  pytest.py  pyupgrade.py  ruff.py  ty.py
src/compwa_policy/repo/: citation.py  commitlint.py  deprecated.py  gitpod.py  poe.py  readthedocs.py  upgrade.py  vscode.py
src/compwa_policy/utilities/: __init__.py  cfg.py  changelog.py  check_hook.py  executor.py  match.py  precommit.py  project_info.py  pyproject.py  python.py  readme.py  resource.py  session.py  toml.py  vscode.py  yaml.py
src/repoma/: .cspell.json  .gitpod.yml  __init__.py  _executor.py  _utilities.py  colab_toc_visible.py  errors.py  fix_first_nbcell.py  fix_nbformat_version.py  format_setup_cfg.py  pin_nb_requirements.py  self_check.py  set_nb_cells.py
src/repoma/.github/: ISSUE_TEMPLATE  pull_request_template.md  release-drafter.yml
src/repoma/.template/: .cspell.json  .taplo.toml  ci-style.yml  commitlint.config.js
src/repoma/check_dev_files/: __init__.py  black.py  check_labels.py  citation.py  commitlint.py  conda.py  cspell.py  cspell_config.py  deprecated.py  editor_config.py  editor_config_hook.py  editorconfig.py  flake8.py  github_labels.py  github_templates.py  github_workflows.py  gitpod.py  isort.py  jupyter.py  mypy.py  nbstripout.py  precommit.py  prettier.py  prettier_config.py  pydocstyle.py  pylint.py  pyright.py  pytest.py  pyupgrade.py  readthedocs.py  release_drafter.py  ruff.py  setup_cfg.py  toml.py  tox.py  tox_config.py  update_pip_constraints.py  update_requirements_workflows.py  vscode.py
src/repoma/dev_tools/: __init__.py  extract_install_requires.py
src/repoma/devtools/: __init__.py  pin_requirements.py
src/repoma/pre_commit_hooks/: __init__.py  fix_first_nbcell.py  fix_nbformat_version.py  format_setup_cfg.py  pin_nb_requirements.py
tests/: .gitignore  conftest.py  test_characterization.py  test_cli.py  test_cspell.py  test_executor.py  test_format_setup_cfg.py  test_gitpod.py  test_pixi.py  test_self_check.py  test_utilities.py
tests/check_dev_files/: test_black.py  test_cli.py  test_cspell.py  test_flake8.py  test_github_templates.py  test_gitpod.py  test_pixi.py
tests/cli/: test_bootstrap.py  test_checks.py  test_migrate.py  test_schema.py
tests/editorconfig/: test_editorconfig.py
tests/env/: test_conda.py  test_uv.py
tests/format/: test_precommit.py  test_prettier.py  test_toml.py
tests/github/: test_workflows.py
tests/nb/: test_binder.py  test_jupyter.py
tests/pre_commit_hooks/: test_executor.py  test_format_setup_cfg.py  test_github_templates.py  test_gitpod.py  test_helpers.py
tests/pyright/: .pre-commit-config-bad.yaml  .pre-commit-config-good.yaml  pyproject-bad.toml  test_pyright.py
tests/python/: .pre-commit-config-good.yaml  test_black.py  test_mypy.py  test_pyproject.py  test_pytest.py  test_pyupgrade.py  test_ruff.py  test_ty.py
tests/readthedocs/: test_readthedocs.py
tests/repo/: test_citation.py  test_commitlint.py  test_deprecated.py  test_poe.py
tests/utilities/: dummy-pre-commit-config.yml  test_cfg.py  test_executor.py  test_precommit.py  test_pyproject.py  test_session.py  test_setup_cfg.py  test_toml.py  test_utilities.py
typings/: README.md
(+127 files in other folders)
