[project]
name = "compwa-policy"
description = "Pre-commit hooks that ensure that ComPWA repositories have a similar developer set-up"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [
    { name = "Common Partial Wave Analysis", email = "compwa-admin@ep1.rub.de" },
]
maintainers = [{ email = "compwa-admin@ep1.rub.de" }]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "PyYAML",
    "attrs >=20.1.0",  # https://www.attrs.org/changelog.html#id82
    "html2text",
    "ini2toml",
    "jinja2",
    "nbformat",
    "packaging",
    "pathspec",
    "pip-tools",
    "pydantic-settings >=2",
    "pydantic >=2",
    "rtoml",  # fast, read-only parsing
    "ruamel.yaml",  # better YAML dumping
    "setuptools",
    "tomlkit",  # preserve original TOML formatting
    "typer >=0.26.0",
    'typing-extensions; python_version <"3.12.0"',  # override
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Changelog = "https://github.com/ComPWA/policy/releases"
Documentation = "https://compwa.github.io/policy"
Issues = "https://github.com/ComPWA/policy/issues"
Source = "https://github.com/ComPWA/policy"

[project.scripts]
check-dev-files = "compwa_policy.cli:main"
policy = "compwa_policy.cli:main"
self-check = "compwa_policy.self_check:main"

# Register the `policy` command on the `pwa` CLI when it is installed. The `pwa` command
# discovers this entry point and mounts the returned Click command as a subcommand, so
# `pwa policy ...` works without either package depending on the other.
[project.entry-points."pwa.commands"]
policy = "compwa_policy.cli:get_click_command"

[dependency-groups]
dev = [
    "labels",
    "ruff",
    { include-group = "doc" },
    { include-group = "style" },
    { include-group = "test" },
]
doc = [
    "myst-parser",
    "sphinx",
    "sphinx-api-relink",
    "sphinx-book-theme",
    "sphinx-codeautolink",
    "sphinx-copybutton",
    "sphinxcontrib-typer",
]
style = [
    "ty",
    { include-group = "types" },
]
test = [
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-describe",
]
types = [
    "pytest",
    "pytest-benchmark",
    "sphinx-api-relink",
    "types-PyYAML",
    "types-toml",
]

[build-system]
requires = [
    "setuptools>=61.2",
    "setuptools_scm",
]
build-backend = "setuptools.build_meta"

[tool.compwa.policy]
pytest-single-threaded = true
repo-name = "policy"
repo-title = "ComPWA repository policy"

[tool.compwa.policy.format]
tombi-errors-on-warnings = true

[tool.compwa.policy.github]
allow-labels = true
no-pypi = true

[tool.compwa.policy.python]
branch-coverage = false
type-checker = ["ty"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
]

[tool.coverage.run]
branch = false
omit = [
    "benchmarks/**/*.py",
    "docs/**/*.ipynb",
    "docs/**/*.py",
    "examples/**/*.py",
    "tests/**/*.py",
]
source = ["src"]

[tool.poe.executor]
isolated = true
no-group = "dev"
type = "uv"

[tool.poe.groups.doc]
heading = "Documentation"

[tool.poe.groups.doc.tasks.doc]
cmd = """
sphinx-build \
    --builder=html \
    --fail-on-warning \
    --keep-going \
    --show-traceback \
    docs/ \
    docs/_build/html/
"""
executor = { group = "doc" }
help = "Build the HTML documentation"

[tool.poe.groups.doc.tasks.doclive]
cmd = """
sphinx-autobuild \
    --builder=html \
    --open-browser \
    --port=0 \
    --re-ignore=/__pycache__(/.*)?$ \
    --re-ignore=/_build(/.*)?$ \
    --re-ignore=/\\.egg-info(/.*)?$ \
    --re-ignore=/api(/.*)?$ \
    --re-ignore=/docs$ \
    --re-ignore=/version\\.py$ \
    --re-ignore=\\.egg-info(/.*)?$ \
    --re-ignore=\\.png$ \
    --re-ignore=\\.svg$ \
    --watch=src \
    docs/ \
    docs/_build/html/
"""
executor = { group = "doc", with = "sphinx-autobuild" }
help = "Set up a server to directly preview changes to the HTML pages"

[tool.poe.groups.doc.tasks.linkcheck]
cmd = """
sphinx-build \
    --builder=linkcheck \
    --show-traceback \
    docs/ \
    docs/_build/linkcheck/
"""
executor = { group = "doc" }
help = "Check external links in the documentation (requires internet connection)"

[tool.poe.groups.test]
heading = "Testing"

[tool.poe.groups.test.tasks.benchmark]
cmd = """
pytest benchmarks \
    --benchmark-autosave \
    --benchmark-json benchmarks/output.json \
    --benchmark-target=${target} \
    --durations=0 \
    -k benchmark
"""
executor = { group = "test" }
help = "Run performance benchmarks"

[[tool.poe.groups.test.tasks.benchmark.args]]
name = "target"
options = ["--target"]
required = true

[tool.poe.groups.test.tasks.cov]
cmd = """
pytest \
    --cov=compwa_policy \
    --cov-fail-under=85 \
    --cov-report=html \
    --cov-report=xml \
    ${paths}
"""
executor = { group = "test" }
help = "Compute how much of the source code is covered by tests"

[[tool.poe.groups.test.tasks.cov.args]]
default = "src tests"
multiple = true
name = "paths"
positional = true

[tool.poe.groups.test.tasks.test]
cmd = "pytest --no-summary ${paths}"
executor = { group = "test" }
help = "Run all unit tests"

[[tool.poe.groups.test.tasks.test.args]]
default = "src tests"
multiple = true
name = "paths"
positional = true

[tool.poe.groups.test.tasks.test-all]
help = "Run all tests on each supported Python version"
sequence = [
    "test-py310 ${paths}",
    "test-py311 ${paths}",
    "test-py312 ${paths}",
    "test-py313 ${paths}",
    "test-py314 ${paths}",
]

[[tool.poe.groups.test.tasks.test-all.args]]
default = ""
multiple = true
name = "paths"
positional = true

[tool.poe.groups.test.tasks.test-py310]
env = { UV_PYTHON = "3.10" }
ref = "test"

[tool.poe.groups.test.tasks.test-py311]
env = { UV_PYTHON = "3.11" }
ref = "test"

[tool.poe.groups.test.tasks.test-py312]
env = { UV_PYTHON = "3.12" }
ref = "test"

[tool.poe.groups.test.tasks.test-py313]
env = { UV_PYTHON = "3.13" }
ref = "test"

[tool.poe.groups.test.tasks.test-py314]
env = { UV_PYTHON = "3.14" }
ref = "test"

[tool.poe.tasks.all]
help = "Run all continuous integration (CI) tasks locally"
ignore_fail = "return_non_zero"
sequence = [
    "style",
    "cov",
    "doc",
    "linkcheck",
    "test-all",
]

[tool.poe.tasks.style]
cmd = "pre-commit run --all-files"
executor = { group = "style" }
help = "Perform all linting, formatting, and spelling checks"

[tool.poe.tasks.upgrade]
executor = { type = "simple" }
help = "Upgrade lock files"
parallel = [
    "upgrade-precommit",
    "upgrade-uv",
]

[tool.poe.tasks.upgrade-precommit]
cmd = "pre-commit autoupdate -j8"
executor = { type = "simple" }

[tool.poe.tasks.upgrade-uv]
cmd = "uv lock --upgrade"
executor = { type = "simple" }

[tool.pytest]
addopts = [
    "--color=yes",
    "--doctest-continue-on-failure",
    "--doctest-modules",
    "--durations-min=0",
    "--durations=3",
    "--ignore=docs/conf.py",
    "--import-mode=importlib",
]
filterwarnings = [
    "error",
    "ignore: Importing ErrorTree directly from the jsonschema package is deprecated.*",
    "ignore: The `hash` argument is deprecated in favor of `unsafe_hash` and will be removed in or after August 2025.:DeprecationWarning",
]
minversion = "9.0"
testpaths = [
    "benchmarks",
    "src",
    "tests",
]

[tool.ruff]
preview = true
show-fixes = true
src = ["src", "tests"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = [
    "ANN401",
    "C408",
    "COM812",
    "CPY001",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    "D203",
    "D213",
    "D407",
    "D416",
    "DOC",
    "E501",
    "FBT",
    "FURB101",
    "FURB103",
    "FURB140",
    "G004",
    "ISC001",
    "PLR0913",
    "PLW1514",
    "PLW2901",
    "PT001",
    "PTH",
    "RUF067",
    "S301",
    "SIM108",
    "UP036",
]
select = ["ALL"]
task-tags = ["cspell"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"benchmarks/*" = [
    "ANN",
    "D",
    "INP001",
    "PLC2701",
    "PLR2004",
    "PLR6301",
    "RUF069",
    "S101",
    "S404",
    "S603",
    "S607",
    "SLF001",
    "T20",
]
"docs/*" = [
    "E402",
    "INP001",
    "S101",
    "S113",
    "T201",
]
"docs/conf.py" = ["D100"]
"setup.py" = ["D100"]
"src/compwa_policy/config.py" = ["D100"]
"tests/*" = [
    "ANN",
    "C901",
    "D",
    "INP001",
    "PLC2701",
    "PLR0915",
    "PLR2004",
    "PLR6301",
    "RUF069",
    "S101",
    "SLF001",
    "T20",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools]
include-package-data = false
license-files = ["LICENSE"]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
compwa_policy = [
    ".github/*",
    ".github/**/*",
    ".template/*",
    ".template/.*",
    "py.typed",
]

[tool.setuptools.packages.find]
namespaces = false
where = ["src"]

[tool.setuptools_scm]
version_file = "src/compwa_policy/version.py"

[tool.tombi.files]
exclude = ["labels/*.toml"]

[tool.tombi.format.rules]
indent-width = 4
line-width = 88

[tool.tombi.lint.rules]
key-empty = "off"

[[tool.tombi.schemas]]
root = "tool.compwa.policy"
path = "compwa-policy.schema.json"
include = ["pyproject.toml"]

[tool.ty.rules]
division-by-zero = "warn"
possibly-missing-import = "warn"
possibly-unresolved-reference = "warn"

[tool.ty.terminal]
error-on-warning = true
