[metadata]
name = repo-maintenance
author = Common Partial Wave Analysis
author_email = compwa-admin@ep1.rub.de
maintainer_email = compwa-admin@ep1.rub.de
description = Pre-commit hooks that ensure that ComPWA repositories have a similar developer set-up
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Tracker = https://github.com/ComPWA/repo-maintenance/issues
    Source = https://github.com/ComPWA/repo-maintenance
license = BSD 3-Clause License
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Typing :: Typed

[options]
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    attrs >=20.1.0  # https://www.attrs.org/en/stable/changelog.html#id82
    nbformat
    pip-tools
    PyYAML
    ruamel.yaml  # better YAML dumping
    toml
packages = find:
package_dir =
    =src

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-xdist
format =
    black
    isort
flake8 =
    flake8 >=4  # extend-select
    flake8-blind-except
    flake8-bugbear
    flake8-builtins
    flake8-comprehensions
    flake8-future-import
    flake8-pytest-style
    flake8-rst-docstrings
    flake8-type-ignore; python_version >="3.8.0"
    flake8-use-fstring
    pep8-naming
mypy =
    mypy
    types-PyYAML
    types-setuptools
    types-toml
lint =
    %(flake8)s
    %(mypy)s
    pydocstyle
    pylint >=2.5  # good-names-rgxs
    radon
sty =
    %(format)s
    %(lint)s
    %(test)s  # for pytest type hints
    pre-commit >=1.4.0
dev =
    %(sty)s
    %(test)s
    labels
    tox >=1.9  # for skip_install, use_develop

[options.entry_points]
console_scripts =
    check-dev-files = repoma.check_dev_files:main
    fix-nbformat-version = repoma.fix_nbformat_version:main
    format-setup-cfg = repoma.format_setup_cfg:main
    pin-nb-requirements = repoma.pin_nb_requirements:main
    repoma-self-check = repoma.self_check:main
    set-nb-cells = repoma.set_nb_cells:main

[options.packages.find]
where = src

[options.package_data]
repoma =
    .github/*
    .github/**/*
    .template/*
    .template/.*
    py.typed
