[metadata]
name = repo-maintenance
author = Common Partial Wave Analysis
author_email = compwa-admin@ep1.rub.de
maintainer_email = compwa-admin@ep1.rub.de
description = Pre-commit hooks that ensure that ComPWA repositories have a similar developer set-up
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Tracker = https://github.com/ComPWA/repo-maintenance/issues
    Source = https://github.com/ComPWA/repo-maintenance
license = BSD 3-Clause License
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Typing :: Typed

[options]
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    attrs >=20.1.0  # https://www.attrs.org/en/stable/changelog.html#id82
    dataclasses; python_version<="3.7.0"
    html2text
    ini2toml
    nbformat
    pip-tools
    pre-commit
    PyYAML
    ruamel.yaml  # better YAML dumping
    tomlkit
packages = find:
package_dir =
    =src

[options.extras_require]
doc =
    myst-parser
    Sphinx
    sphinx-argparse
    sphinx-book-theme
    sphinx-copybutton
test =
    pytest
    pytest-cov
    pytest-xdist
format =
    black
mypy =
    mypy
    types-PyYAML
    types-requests
    types-setuptools
    types-toml
lint =
    %(mypy)s
    radon
    ruff; python_version >="3.7.0"
sty =
    %(format)s
    %(lint)s
    %(test)s  # for pytest type hints
    pre-commit >=1.4.0
dev =
    %(doc)s
    %(sty)s
    %(test)s
    labels
    sphinx-autobuild
    tox >=1.9  # for skip_install, use_develop

[options.entry_points]
console_scripts =
    check-dev-files = repoma.check_dev_files:main
    colab-toc-visible = repoma.colab_toc_visible:main
    fix-nbformat-version = repoma.fix_nbformat_version:main
    format-setup-cfg = repoma.format_setup_cfg:main
    pin-nb-requirements = repoma.pin_nb_requirements:main
    repoma-self-check = repoma.self_check:main
    set-nb-cells = repoma.set_nb_cells:main

[options.packages.find]
where = src

[options.package_data]
repoma =
    .github/*
    .github/**/*
    .template/*
    .template/.*
    py.typed
